PyQt5学习入门，毕设启动！

--- a/ui/QThread-1.ui
+++ b/ui/QThread-1.ui
@@ -33,7 +33,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>在UI进程中进行</string>
+    <string>在UI线程中进行</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
